fixed modal backdrop size on smaller displays

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,27 @@
 .App {
   text-align: center;
   background-color: #f5f5f5;
-  padding: 16px
+  padding: 16px;
 }
-
 
 #all-elements-table {
   width: 100%;
   border-collapse: separate;
   border-spacing: 16px;
+  background-color: #f5f5f5;
+}
+
+.modal-backdrop {
+  height: 100%;
+  width: 100%;
 }
 
 .row-item {
   padding: 12px;
   cursor: pointer;
   border-radius: 16px;
-  background: #F5F5F5;
-  box-shadow: 20px 20px 60px #d0d0d0,
-    -20px -20px 60px #ffffff;
+  background: #f5f5f5;
+  box-shadow: 20px 20px 60px #d0d0d0, -20px -20px 60px #ffffff;
 }
 
 #properties-div {
@@ -26,4 +30,5 @@
 
 .modal-content {
   border-radius: 16px;
+  border-width: 0;
 }
